# J-PET-time-sync

./: .gitmodules  CMakeLists.txt  Fit-AB.cpp  Fit-neighbour.cpp  Fit-oposite.cpp  Fit-scattered.cpp  Prepare-preselect.cpp  Preselect-AB.cpp  Preselect-Hits.cpp  Preselect-Signals.cpp  Preselect-StripsSync.cpp  README.md  RunSync.sh  Solve-equations.cpp  SyncAB-fits.cpp  SyncAB-preselect.cpp  SyncStrips-fits.cpp  SyncStrips-neighbour.cpp  SyncStrips-oposite.cpp  SyncStrips-preselect.cpp  Synchro-solve-equations.cpp  TOF-build.cpp  TOF-cut-preselect.cpp  TOF-hists-before.cpp  TOT-hists-after.cpp  TOT-hists-before.cpp  TOT-hists.cpp  analyse-all-stages.sh  analyse-prepare.sh  analyse-sync.sh  analyse1-prepare-xz.sh  analyse1-prepare.sh  analyse2-AB.sh  analyse2-sync.sh  analyse2-tof.sh  analyse2-tot-more-files.sh  analyse2-tot.sh  analyse3-AB-more-files.sh  analyse3-AB.sh  analyse3-strips.sh  (+10 more)
AppSyncWithColimator/: Prepare-preselect.cpp  SyncAB-fits.cpp  SyncAB-preselect.cpp  SyncStrips-neighbour.cpp  SyncStrips-oposite.cpp  SyncStrips-preselect.cpp  Synchro-solve-equations.cpp  TOF-cut-preselect.cpp  TOF-hists-after.cpp  TOF-hists-before.cpp  analyse2-tof.sh  analyse3-sync.sh
AppSyncWithRef/: Preselect.cpp  conf_trb3.xml  large_barrel.json
Calc/: Connection.cpp  SyncAB.cpp  SyncAB.h  SyncNeighbour.cpp  SyncOposite.cpp  SyncProcedures.h  SyncScatter.cpp  convention.h
IO/: PetDict.h  gethist.cpp  gethist.h
Preselection/: LargeBarrelExtensions.cpp  LargeBarrelExtensions.h  LargeBarrelMapping.cpp  LargeBarrelMapping.h  PrepareHits.cpp  PrepareHits.h  PrepareSignals.cpp  PrepareSignals.h  PreselectionMain.cpp  PreselectionMain.h  SyncAB.cpp  SyncAB.h  SyncRef.cpp  SyncRef.h  SyncStrips.cpp  SyncStrips.h  TOFCut.cpp  TOFCut.h  TOFStat.cpp  TOFStat.h  TOT-conditions.cpp  TOT-conditions.h  TaskA.cpp  TaskA.h  TaskB.cpp  TaskB.h  TaskB1.cpp  TaskB1.h  TaskC.cpp  TaskC.h  TaskC1.cpp  TaskC1.h  TaskD.cpp  TaskD.h  TaskE.cpp  TaskE.h  TaskTimeSync.cpp  TaskTimeSync.h  TestAB.cpp  TestAB.h  (+2 more)
config-files/: configDB.cfg
configs/run1/: j-pet-config.h
configs/run2/: conf_trb3.xml  j-pet-config.h  j-pet-setup.json
io/: gethist.cpp
j-pet-framework-extension/: BarrelExtensions.cpp  BarrelExtensions.h  PetDict.h  deltas.cpp  deltas.h
j-pet-framework-extension/tests/: PetDict.cpp
